--- a/src/Components/Layout/Header/Header.module.scss
+++ b/src/Components/Layout/Header/Header.module.scss
@@ -1,33 +1,46 @@
+@import "src/Styles/variables";
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 40px 20px;
+  margin: 20px;
   height: 68px;
 
   nav {
     display: flex;
     justify-content: space-around;
+    white-space: nowrap;
     color: #FF6060;
 
     a {
+      text-decoration: none;
       color: inherit;
       font-size: 18px;
       font-weight: 500;
-      margin: 0 10px;
+      margin: 0 .5rem;
+
+      & .active {
+        text-decoration: underline;
+      }
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $mobileBreak) {
     margin: 40px 100px;
 
     nav > a {
       font-size: 24px;
+      margin: 0 1rem;
     }
   }
 }
 
 .headerLogo {
-  height: 68px;
-  width: 210px;
+  height: 47px;
+  width: 145px;
+
+  @media screen and (min-width: $mobileBreak) {
+
+  }
 }
