--- a/src/Components/Layout/Footer/Footer.module.scss
+++ b/src/Components/Layout/Footer/Footer.module.scss
@@ -4,9 +4,10 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 210px;
+  padding: 40px 0;
   background-color: #000;
   color: #fff;
+  margin-top: auto;
 
   p {
     font-size: 12px;
