--- a/src/Components/Layout/Header/Header.module.scss
+++ b/src/Components/Layout/Header/Header.module.scss
@@ -1,5 +1,13 @@
 @import "src/Styles/variables";
 
+@mixin nav-item {
+  text-decoration: none;
+  color: inherit;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0 .5rem;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -13,16 +21,13 @@
     white-space: nowrap;
     color: #FF6060;
 
-    a {
-      text-decoration: none;
-      color: inherit;
-      font-size: 18px;
-      font-weight: 500;
-      margin: 0 .5rem;
+    .navItem {
+      @include nav-item;
+    }
 
-      & .active {
-        text-decoration: underline;
-      }
+    .navItemActive {
+      @include nav-item;
+      text-decoration: underline;
     }
   }
 
@@ -41,6 +46,7 @@
   width: 145px;
 
   @media screen and (min-width: $mobileBreak) {
-
+    height: 68px;
+    width: 210px;
   }
 }
