--- a/src/Components/Gallery/Gallery.module.scss
+++ b/src/Components/Gallery/Gallery.module.scss
@@ -5,6 +5,10 @@
   flex-direction: column;
   align-items: center;
 
+  a {
+    text-decoration: none;
+  }
+
   @media screen and (min-width: $mobileBreak) {
     flex-direction: row;
     align-items: flex-start;
