--- a/src/Components/Carrousel/Carrousel.module.scss
+++ b/src/Components/Carrousel/Carrousel.module.scss
@@ -5,7 +5,7 @@
   min-width: 335px;
   height: 255px;
   border-radius: 10px;
-  margin: 0 20px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
